--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "chartDirecive",
+  "name": "cc-chart-directive",
   "description": "Highcharts chart directive",
   "authors": [
   "ClearCode (http://clearcode.cc)"
